--- a/c20-76-t-data-bi-MicaC/index.html
+++ b/c20-76-t-data-bi-MicaC/index.html
@@ -19,7 +19,7 @@
 							<li>
 								<a href="#">Dashboard</a>
 							</li>
-							<li><a href="elements.html">Analisis</a></li>
+							<li><a href="elements.html">Predicción</a></li>
 							<li><a href="images/Nosotros.html">Nosotros</a></li>
 							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
